src/ui/snapshots/gprr__ui__pr_detail__tests__renders_commits_tab_empty.snap
---
source: src/ui/pr_detail.rs
assertion_line: 928
expression: terminal.backend()
---
"No commits.                                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
