src/ui/snapshots/gprr__ui__pr_detail__tests__renders_conversation_mid_scroll.snap
---
source: src/ui/pr_detail.rs
expression: terminal.backend()
---
"✎ alice 5y ago                                                                 ║"
"Nice PR!                                                                       ║"
"                                                                               █"
"───────────────────────────────────────────────────────────────────────────────█"
"✎ bob 5y ago                                                                   █"
"Agreed!                                                                        ║"
"                                                                               ║"
"───────────────────────────────────────────────────────────────────────────────║"
