src/ui/snapshots/gprr__ui__pr_detail__tests__renders_draft_with_empty_timeline.snap
---
source: src/ui/pr_detail.rs
expression: terminal.backend()
---
"#42  Add warp drive  [DRAFT]  [MERGEABLE]  ✓ ·                                  "
"                                                                                "
"                                                                                "
"No activity yet.                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
