src/ui/snapshots/gprr__ui__pr_detail__tests__renders_header_body_and_mixed_timeline.snap
---
source: src/ui/pr_detail.rs
expression: terminal.backend()
---
"#42  Add warp drive  [OPEN]  [MERGEABLE]  ✓ ·                                   "
"                                                                                "
"Fixes #42. Details here.                                                        "
"                                                                                "
"                                                                                "
"✎ alice 5y ago                                                                  "
"Looks good but needs tests.                                                     "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"─────────────────────── old_sha → abcd123 (force-pushed) ───────────────────────"
"────────────────────────────────────────────────────────────────────────────────"
"★ bob 5y ago  Approved                                                          "
"LGTM                                                                            "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"▸ src/lib.rs:10 [resolved]  (2 comments)                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
