src/ui/snapshots/gprr__ui__pr_detail__tests__renders_resolved_thread_focused_expanded.snap
---
source: src/ui/pr_detail.rs
expression: terminal.backend()
---
"#42  Add warp drive  [OPEN]  [MERGEABLE]  ✓ ·                                   "
"                                                                                "
"PR body.                                                                        "
"                                                                                "
"                                                                                "
"▶ src/lib.rs:5 [resolved]  (2 comments)                                         "
"    alice: Needs fix.                                                           "
"                                                                                "
"    bob: Done.                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
