src/ui/snapshots/gprr__ui__pr_detail__tests__renders_thread_with_all_comments_and_suggestion_block.snap
---
source: src/ui/pr_detail.rs
expression: terminal.backend()
---
"#42  Add warp drive  [OPEN]  [MERGEABLE]  ✓ ·                                   "
"                                                                                "
"                                                                                "
"▸ src/lib.rs:10  (2 comments)                                                   "
"    alice: Consider this:                                                       "
"                                                                                "
"    [suggestion]                                                                "
"      +let x = 1;                                                               "
"    bob: Thanks!                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
